# REMOVED in 2.16
#  zoltan-test_3d_dms.gkf    zoltan-test_3d_dms.xml zoltan-test_3d_dms.yaml \
#  zoltan-test_3d_gon.gkf    zoltan-test_3d_gon.xml \
#
EXTRA_DIST = \
  gama-local.gkf            gama-local.xml \
  zoltan-test_2d_dms.gkf    zoltan-test_2d_dms.xml \
  zoltan-test_2d_gon.gkf    zoltan-test_2d_gon.xml zoltan-test_2d_gon.yaml \
  scale-cov-gon.gkf \
  scale-cov-dms.gkf \
  fixed-constrained.gkf \
  jezerka-ang.gkf           jezerka-ang.xml    jezerka-ang.yaml \
  jezerka-dir.gkf           jezerka-dir.xml    jezerka-dir.yaml \
  fixed-azimuth.gkf         fixed-azimuth.xml \
  azimuth-angle.gkf         azimuth-angle.xml \
  azimuth-azimuth.gkf       azimuth-azimuth.xml \
  azimuth-distance.gkf      azimuth-distance.xml \
  triangle-1.gkf            triangle-1.xml \
  triangle-2.gkf            triangle-2.xml \
  stroner-levelling-a.gkf   stroner-levelling-a.xml \
  stroner-levelling-b.gkf   stroner-levelling-b.xml \
  extern-azimuth-distance.gkf \
  extern-azimuth-distance.xml \
  extern-seq-dsuloha-d.gkf \
  extern-seq-dsuloha-d.xml \
  gama-local-nop.gkf \
  gama-local-par.gkf \
  gama-local-deprecated.gkf \
  local_3d.gkf local_3d.xml \
  skorepa-dusek.gkf \
  seq-dsuloha-d.gkf   seq-dsuloha-d.xml   seq-dsuloha-d.yaml \
  mikhail-7.4.gkf     mikhail-7.4.xml     mikhail-7.4.yaml \
  mikhail-7.4-cov.README \
  mikhail-7.4-cov.gkf mikhail-7.4-cov.xml mikhail-7.4-cov.yaml \
  geodet-pc-123.gkf   geodet-pc-123.xml   geodet-pc-123.yaml \
  geodet-pc-218.gkf   geodet-pc-218.xml   geodet-pc-218.yaml \
  tetrahedron.gkf     tetrahedron.xml     tetrahedron.yaml   tetrahedron.m \
  cube-1.gkf          cube-1.xml          cube-1.yaml        cube-1.m \
  minimal.gkf         minimal.xml         minimal.yaml \
  \
  bug/2019-08-06-integer-coordinates.gkf \
  bug/2019-08-06-integer-coordinates.xml \
  bug/2019-08-13-traverse-knin_male.gkf \
  bug/2019-08-13-traverse-knin_male.xml \
  bug/2019-08-20-knin_test.gkf \
  bug/2019-08-20-knin_test.xml \
  bug/tst-tetrahedron-1.gkf \
  bug/tst-tetrahedron-1.xml \
  bug/tst-tetrahedron-2.gkf \
  bug/tst-tetrahedron-2.xml \
  bug/tst-tetrahedron-3-deg.gkf \
  bug/tst-tetrahedron-3-deg.xml \
  bug/tst-tetrahedron-3-gon.gkf \
  bug/tst-tetrahedron-3-gon.xml \
  bug/extern-tst-tetrahedron-3-gon.gkf \
  bug/extern-tst-tetrahedron-3-gon.xml \
  bug/krasovsky-1926.gkf \
  bug/krasovsky-1926.xml \
  \
  ctu/2020-barta-phase_0-1TK.gkf \
  ctu/2020-barta-phase_0-1TK.xml \
  ctu/2020-barta-phase_0-2TK.gkf \
  ctu/2020-barta-phase_0-2TK.xml \
  ctu/2020-barta-phase_1-1TK.gkf \
  ctu/2020-barta-phase_1-1TK.xml \
  ctu/2020-barta-phase_1-2TK.gkf \
  ctu/2020-barta-phase_1-2TK.xml \
  \
  sim/from-to-dh.gkf \
  sim/from-to-dh.xml \
  \
  krumm/1D/Baumann_Height_fix.gkf      krumm/1D/Krumm_Height_fix.gkf \
  krumm/1D/Baumann_Height_fix.xml      krumm/1D/Krumm_Height_fix.xml \
  krumm/1D/Ghilani12_6_Height_fix.gkf  krumm/1D/Niemeier_Height_fix1.gkf \
  krumm/1D/Ghilani12_6_Height_fix.xml  krumm/1D/Niemeier_Height_fix1.xml \
  krumm/1D/Krumm_Height_dyn.gkf        krumm/1D/Niemeier_Height_free.gkf \
  krumm/1D/Krumm_Height_dyn.xml        krumm/1D/Niemeier_Height_free.xml \
  krumm/2D/Benning82_Distance_fix.gkf                krumm/2D/Grossmann_Direction_fix.xml \
  krumm/2D/Benning82_Distance_fix.xml                krumm/2D/Hoepke_Distance_free.gkf \
  krumm/2D/Benning83_DistanceDirection_fix.gkf       krumm/2D/Hoepke_Distance_free.xml \
  krumm/2D/Benning83_DistanceDirection_fix.xml       krumm/2D/LotherStrehle_Direction1.gkf \
  krumm/2D/Benning85.gkf                             krumm/2D/LotherStrehle_Direction1.xml \
  krumm/2D/Benning85.xml                             krumm/2D/LotherStrehle_Direction2.gkf \
  krumm/2D/Benning88_Distance_fix.gkf                krumm/2D/LotherStrehle_Direction2.xml \
  krumm/2D/Benning88_Distance_fix.xml                krumm/2D/LotherStrehle_Direction3.gkf \
  krumm/2D/Carosio_DistanceDirection_fix.gkf         krumm/2D/LotherStrehle_Direction3.xml \
  krumm/2D/Carosio_DistanceDirection_fix.xml         krumm/2D/LotherStrehle_Direction4.gkf \
  krumm/2D/Ghilani14_5_Distance_fix.gkf              krumm/2D/LotherStrehle_Direction4.xml \
  krumm/2D/Ghilani14_5_Distance_fix.xml              krumm/2D/LotherStrehle_Direction5.gkf \
  krumm/2D/Ghilani15_4_Angle_fix.gkf                 krumm/2D/LotherStrehle_Direction5.xml \
  krumm/2D/Ghilani15_4_Angle_fix.xml                 krumm/2D/LotherStrehle_Direction7.gkf \
  krumm/2D/Ghilani15_5_Angle_fix.gkf                 krumm/2D/LotherStrehle_Direction7.xml \
  krumm/2D/Ghilani15_5_Angle_fix.xml                 krumm/2D/Niemeier_DistanceDirection_fix.gkf \
  krumm/2D/Ghilani16_1_Traverse.gkf                  krumm/2D/Niemeier_DistanceDirection_fix.xml \
  krumm/2D/Ghilani16_1_Traverse.xml                  krumm/2D/StrangBorre_Distance_fix.gkf \
  krumm/2D/Ghilani16_2_DistanceAngleAzimuth_fix.gkf  krumm/2D/StrangBorre_Distance_fix.xml \
  krumm/2D/Ghilani16_2_DistanceAngleAzimuth_fix.xml  krumm/2D/StrangBorre_Distance_free.gkf \
  krumm/2D/Ghilani21_10_DistanceAngle_fix.gkf        krumm/2D/StrangBorre_Distance_free.xml \
  krumm/2D/Ghilani21_10_DistanceAngle_fix.xml        krumm/2D/WeissEtAl_Distance_fix.gkf \
  krumm/2D/Ghilani_Wolf_Distance_Angle.gkf           krumm/2D/WeissEtAl_Distance_fix.xml \
  krumm/2D/Ghilani_Wolf_Distance_Angle.xml           krumm/2D/Wolf_DistanceDirectionAngle_free.gkf \
  krumm/2D/Grossmann_Direction_fix.gkf               krumm/2D/Wolf_DistanceDirectionAngle_free.xml \
  krumm/3D/Baumann23_3_4_fix.gkf       krumm/3D/Wolf_3D_Distance_fix.gkf \
  krumm/3D/Baumann23_3_4_fix.xml       krumm/3D/Wolf_3D_Distance_fix.xml \
  krumm/3D/Caspary.gkf                 krumm/3D/Wolf_3D_DistanceVerticalAngle_fix.gkf \
  krumm/3D/Caspary.xml                 krumm/3D/Wolf_3D_DistanceVerticalAngle_fix.xml \
  krumm/3D/Ghilani_GNSS_Baselines.gkf  krumm/3D/Wolf_SpatialPolygonTraverse_fix.gkf \
  krumm/3D/Ghilani_GNSS_Baselines.xml  krumm/3D/Wolf_SpatialPolygonTraverse_fix.xml
 
