EXTRA_DIST = \
  gama-local.gkf \
  traverse-01-en-left.gkf  \
  traverse-01-en-right.gkf \
  traverse-01-es-left.gkf  \
  traverse-01-es-right.gkf \
  traverse-01-ne-left.gkf  \
  traverse-01-ne-right.gkf \
  traverse-01-nw-left.gkf  \
  traverse-01-nw-right.gkf \
  traverse-01-se-left.gkf  \
  traverse-01-se-right.gkf \
  traverse-01-sw-left.gkf  \
  traverse-01-sw-right.gkf \
  traverse-01-wn-left.gkf  \
  traverse-01-wn-right.gkf \
  traverse-01-ws-left.gkf  \
  traverse-01-ws-right.gkf
