EXTRA_DIST = \
  angle-01.0.a2g  \
  angle-01.a2g	  \
  azimuth-01.a2g  \
  azimuth-02.a2g  \
  azimuth-03.a2g  \
  azimuth-04.a2g  \
  azimuth-05.a2g  \
  polar-01.a2g	  \
  polar-02.a2g	  \
  traverse-01.a2g \
  traverse-02.a2g \
  traverse-03.a2g \
  traverse-04.a2g \
  trivial-01.a2g  \
  trivial-02.a2g  \
  trivial-03.a2g
